--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -32,7 +32,9 @@
     <Button
         android:id="@+id/crime_time"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="CHOOSE TIME"/>
+
 
     <CheckBox
         android:id="@+id/crime_solved"
