--- a/app/src/main/res/layout/dialog_zoom.xml
+++ b/app/src/main/res/layout/dialog_zoom.xml
@@ -1,15 +1,13 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<ImageView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/photo_view_dialog"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal|center_vertical"
+    android:adjustViewBounds="false"
+    android:background="@android:color/black"
+    android:contentDescription="Evidence photo">
 
-    <ImageView
-        android:id="@+id/photo_view_dialog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:adjustViewBounds="false"
-        android:background="@android:color/white"
-        android:contentDescription="Evidence photo"/>
+</ImageView>
 
-</FrameLayout>
 
